# rawk

./: BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  TODO.md  deny.toml
.cursor/rules/: rawk.mdc
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility.md  config.yml  feature_request.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml  security.yml
benches/: benchmarks.rs
coverage/: lcov.info  tarpaulin-report.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_interpreter.rs  fuzz_lexer.rs  fuzz_parser.rs
src/: ast.rs  error.rs  lib.rs  main.rs  value.rs
src/interpreter/: builtins.rs  expr.rs  mod.rs  stmt.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: mod.rs
tests/: cli.rs  e2e.rs  gawk_compat.rs
tests/fixtures/: log.txt  numbers.txt  passwd.txt
